Added Apache Karaf stage and support for deployment.

--- a/bootstrap/build.xml
+++ b/bootstrap/build.xml
@@ -27,11 +27,15 @@
 
         <echo message="Building bundle."/>
 
+        <local name="bundle.dist.jar"/>
         <build.bundle symbolicName="Bootstrap" version="1.0.0"
-            src="${basedir}/src" bnd="${basedir}/bundle.bnd">
+            src="${basedir}/src" bnd="${basedir}/bundle.bnd"
+                      outfileProperty="bundle.dist.jar">
             <path refid="karaf/runtime"/>
             <path refid="karaf/util"/>
         </build.bundle>
+
+        <deploy file="${bundle.dist.jar}"/>
 
     </target>
 
