Make bin/* +x for Unix/Linux.

--- a/00-apache-karaf/build.xml
+++ b/00-apache-karaf/build.xml
@@ -33,6 +33,14 @@
             </then>
         </if>
 
+        <!-- Make /bin/* +x since we get Karaf from .zip -->
+        <chmod perm="ug+rx">
+            <fileset dir="${stage.dir}">
+                <include name="bin/*"/>
+                <exclude name="**/*.bat"/>
+            </fileset>
+        </chmod>
+        
     </target>
 
 </project>
