Target 'build-all' now also builds the stage.

--- a/build.xml
+++ b/build.xml
@@ -20,6 +20,7 @@
     </target>
 
     <target name="build-all">
+        <antcall target="build-stage"/>
         <iterate target=""/>
     </target>
 
