--- a/03-rest-playground/build.xml
+++ b/03-rest-playground/build.xml
@@ -56,4 +56,12 @@
 
     </target>
 
+    <target name="build-all" depends="init">
+
+        <antcall target="deploy-jersey"/>
+        <antcall target="build-hello"/>
+        <antcall target="build-jersey"/>
+
+    </target>
+
 </project>
