Fix filename 'stage.properties' to 'deploy.properties'.

--- a/stage-templates/apache-karaf-4.1/build.xml
+++ b/stage-templates/apache-karaf-4.1/build.xml
@@ -44,7 +44,7 @@
         </unzip>
 
         <!-- Store the deployment location we should use -->
-        <propertyfile file="${stage.dir}/stage.properties">
+        <propertyfile file="${stage.dir}/deploy.properties">
             <entry key="deploy.dir" value="${stage.dir}/deploy"/>
         </propertyfile>
 
