--- a/build.xml
+++ b/build.xml
@@ -3,8 +3,16 @@
 
     <import file="configure.xml"/>
 
-    <target name="build-stage">
+    <target name="build-karaf">
         <subant buildpath="${basedir}/stage-templates/apache-karaf-4.1"/>
+    </target>
+
+    <target name="build-felix">
+        <subant buildpath="${basedir}/stage-templates/apache-felix-5.6"/>
+    </target>
+
+    <target name="build-stage">
+        <antcall target="build-karaf"/>
     </target>
 
     <target name="build-library-version">
