--- a/stage-templates/apache-felix-5.6/build.xml
+++ b/stage-templates/apache-felix-5.6/build.xml
@@ -10,6 +10,29 @@
 
     <property name="main.class" value="org.apache.felix.main.Main"/>
 
+    <target name="getlibs" depends="configure.getlibs">
+
+        <!--resolvePath id="felix/webconsole">
+            <dependency org="org.apache.felix" name="org.apache.felix.webconsole" rev="4.3.4"/>
+        </resolvePath-->
+
+        <resolvePath id="pax/logging">
+            <dependency org="org.ops4j.pax.logging" name="pax-logging-api" rev="1.10.1" transitive="false"/>
+            <dependency org="org.ops4j.pax.logging" name="pax-logging-service" rev="1.10.1" transitive="false"/>
+            <dependency org="org.ops4j.pax.logging" name="pax-logging-log4j2" rev="1.10.1" transitive="false"/>
+            <dependency org="org.apache.felix" name="org.apache.felix.configadmin" rev="1.8.16" transitive="false"/>
+            <dependency org="org.apache.felix" name="org.apache.felix.fileinstall" rev="3.6.4" transitive="false"/>
+        </resolvePath>
+
+        <!--resolvePath id="pax/web">
+            <dependency org="org.ops4j.pax.web" name="pax-web-api" rev="6.1.1" transitive="false"/>
+            <dependency org="org.ops4j.pax.web" name="pax-web-jetty" rev="6.1.1" transitive="false"/>
+            <dependency org="org.ops4j.pax.web" name="pax-web-runtime" rev="6.1.1" transitive="false"/>
+            <dependency org="org.ops4j.pax.web" name="pax-web-spi" rev="6.1.1" transitive="false"/>
+        </resolvePath-->
+
+    </target>
+
     <target name="build-runtime" depends="init">
 
         <!--
@@ -33,8 +56,9 @@
         </unzip>
 
         <!-- Store the deployment location we should use -->
+        <property name="deploy.dir" value="${stage.dir}/bundle"/>
         <propertyfile file="${stage.dir}/deploy.properties">
-            <entry key="deploy.dir" value="${stage.dir}/bundle"/>
+            <entry key="deploy.dir" value="${deploy.dir}"/>
         </propertyfile>
 
         <!-- No -x anywhere -->
@@ -58,6 +82,24 @@
             <file name="${stage.dir}/bin/felix.jar"/>
         </concat>
         <chmod file="${fancy-launcher}" perm="a+x"/>
+
+        <!-- Copy preloaded bundles -->
+        <copy todir="${deploy.dir}" flatten="true">
+            <path refid="default/ipojo"/>
+            <path refid="pax/logging"/>
+            <!--path refid="pax/web"/>
+            <path refid="felix/webconsole"/-->
+        </copy>
+        <delete file="${deploy.dir}/org.apache.felix.ipojo.annotations-1.12.1.jar"/>
+        <touch file="${stage.dir}/log/felix.log" mkdirs="true"/>
+
+        <!-- Copy extra config files -->
+        <copy todir="${stage.dir}/conf">
+            <fileset dir="${basedir}/conf" includes="**/*"/>
+        </copy>
+
+        <!-- Remove docs dir -->
+        <delete dir="${stage.dir}/doc"/>
 
         <!-- Make /bin/* +x since we get Felix from .zip -->
         <chmod perm="ug+rx">
