Fix 'felix.fileinstall.dir' default location.

--- a/stage-templates/apache-felix-5.6/conf/config.properties
+++ b/stage-templates/apache-felix-5.6/conf/config.properties
@@ -96,14 +96,15 @@ felix.log.level=1
 # Bundle config properties.
 #
 
-org.osgi.service.http.port=8080
+# Bogus?
+#org.osgi.service.http.port=8080
 obr.repository.url=http://felix.apache.org/obr/releases.xml
 
 #
 # Configuration FileMonitor properties
 #
 felix.fileinstall.enableConfigSave = true
-felix.fileinstall.dir    = /home/marcond/My Lab/architecture-examples/stage/conf
+felix.fileinstall.dir    = ${felix.home}/conf
 felix.fileinstall.filter = .*\\.(cfg|config)
 felix.fileinstall.poll   = 1000
 felix.fileinstall.noInitialDelay = true
