--- a/stage-templates/apache-felix-5.6/build.xml
+++ b/stage-templates/apache-felix-5.6/build.xml
@@ -12,12 +12,22 @@
 
     <target name="getlibs" depends="configure.getlibs">
 
+        <resolvePath id="felix/ds">
+            <dependency org="org.apache.felix" name="org.apache.felix.scr.compat" rev="1.0.4" transitive="false"/>
+            <dependency org="org.apache.felix" name="org.apache.felix.scr" rev="2.0.14" transitive="false"/>
+        </resolvePath>
+
         <resolvePath id="felix/webconsole">
             <!-- Main -->
             <dependency org="org.apache.felix" name="org.apache.felix.webconsole" rev="4.3.4" transitive="false"/>
             <!-- Dependencies -->
             <dependency org="commons-fileupload" name="commons-fileupload" rev="1.2.1" transitive="false"/>
             <dependency org="commons-io" name="commons-io" rev="1.4" transitive="false"/>
+        </resolvePath>
+
+        <resolvePath id="pax/url">
+            <dependency org="org.ops4j.pax.url" name="pax-url-mvn" rev="1.3.7" transitive="false"/>
+            <dependency org="org.ops4j.pax.url" name="pax-url-wrap" rev="2.5.4" transitive="false"/>
         </resolvePath>
 
         <resolvePath id="pax/logging">
@@ -33,7 +43,7 @@
         <resolvePath id="pax/web">
             <!-- Main -->
             <dependency org="org.ops4j.pax.web" name="pax-web-api" rev="6.1.2" transitive="false"/>
-            <dependency org="org.ops4j.pax.web" name="pax-web-jetty-bundle" rev="6.1.2" transitive="false"/>
+            <dependency org="org.ops4j.pax.web" name="pax-web-jetty" rev="6.1.2" transitive="false"/>
             <dependency org="org.ops4j.pax.web" name="pax-web-runtime" rev="6.1.2" transitive="false"/>
             <dependency org="org.ops4j.pax.web" name="pax-web-spi" rev="6.1.2" transitive="false"/>
             <!-- Dependencies -->
@@ -42,6 +52,49 @@
             <dependency org="org.apache.xbean" name="xbean-bundleutils" rev="4.6" transitive="false"/>
             <dependency org="org.ow2.asm" name="asm" rev="6.0"/>
             <dependency org="org.ow2.asm" name="asm-commons" rev="6.0"/>
+        </resolvePath>
+
+        <resolvePath id="jetty/jetty">
+            <!-- Main -->
+            <dependency org="org.eclipse.jetty" name="jetty-server" rev="9.3.22.v20171030" transitive="false"/>
+            <dependency org="org.eclipse.jetty" name="jetty-security" rev="9.3.22.v20171030" transitive="false"/>
+            <dependency org="org.eclipse.jetty" name="jetty-io" rev="9.3.22.v20171030" transitive="false"/>
+            <dependency org="org.eclipse.jetty" name="jetty-jaas" rev="9.3.22.v20171030" transitive="false"/>
+            <dependency org="org.eclipse.jetty" name="jetty-servlet" rev="9.3.22.v20171030" transitive="false"/>
+            <dependency org="org.eclipse.jetty.aggregate" name="jetty-all" rev="9.3.22.v20171030" transitive="false">
+                <artifact name="jetty-all" type="pom" ext="pom"/>
+            </dependency>
+            <dependency org="org.eclipse.jetty" name="jetty-jaas" rev="9.3.22.v20171030" transitive="false"/>
+            <dependency org="org.eclipse.jetty" name="jetty-alpn-server" rev="9.3.22.v20171030" transitive="false"/>
+            <dependency org="org.eclipse.jetty.http2" name="http2-server" rev="9.3.22.v20171030" transitive="false"/>
+            <dependency org="org.eclipse.jetty" name="jetty-xml" rev="9.3.22.v20171030"/>
+            <dependency org="org.eclipse.jetty.http2" name="http2-common" rev="9.3.22.v20171030"/>
+            <dependency org="org.eclipse.jetty.osgi" name="jetty-osgi-alpn" rev="9.3.22.v20171030" transitive="false"/>
+            <dependency org="org.mortbay.jetty.alpn" name="alpn-boot" rev="8.1.2.v20141202" transitive="false"/>
+            <!-- Dependencies -->
+            <dependency org="javax.servlet" name="javax.servlet-api" rev="3.1.0"/>
+        </resolvePath>
+
+        <resolvePath id="pax/war">
+            <!-- Main -->
+            <dependency org="org.ops4j.pax.url" name="pax-url-war" rev="2.5.4" transitive="false"/>
+            <dependency org="org.ops4j.pax.web" name="pax-web-jsp" rev="6.1.2" transitive="false"/>
+            <dependency org="org.ops4j.pax.web" name="pax-web-deployer" rev="6.1.2" transitive="false"/>
+            <dependency org="org.ops4j.pax.web" name="pax-web-extender-whiteboard" rev="6.1.2" transitive="false"/>
+            <dependency org="org.ops4j.pax.web" name="pax-web-extender-war" rev="6.1.2" transitive="false"/>
+            <dependency org="org.ops4j.pax.web" name="pax-web-descriptor" rev="6.1.2" transitive="false"/>
+            <!-- Dependencies -->
+            <dependency org="org.eclipse.jdt.core.compiler" name="ecj" rev="4.5.1" transitive="false"/>
+            <dependency org="org.ops4j.base" name="ops4j-base-net" rev="1.5.0" transitive="false"/>
+            <dependency org="org.ops4j.base" name="ops4j-base-lang" rev="1.5.0" transitive="false"/>
+            <dependency org="org.ops4j.pax.url" name="pax-url-commons" rev="2.5.4" transitive="false"/>
+            <dependency org="org.ops4j.pax.swissbox" name="pax-swissbox-property" rev="1.8.2" transitive="false"/>
+            <dependency org="org.ops4j.base" name="ops4j-base-util-property" rev="1.5.0" transitive="false"/>
+            <dependency org="org.ops4j.base" name="ops4j-base-monitors" rev="1.5.0" transitive="false"/>
+            <dependency org="org.ops4j.pax.swissbox" name="pax-swissbox-bnd" rev="1.8.3" transitive="false"/>
+            <dependency org="javax.el" name="javax.el-api" rev="3.0.0" transitive="false"/>
+            <!-- Bnd! -->
+            <dependency org="biz.aQute.bnd" name="bndlib" rev="2.4.0" transitive="false"/><!-- TODO: MOVE UP -->
         </resolvePath>
 
     </target>
@@ -100,10 +153,14 @@
         <!-- Copy preloaded bundles -->
         <property name="preload.bundles.dir" value="${stage.dir}/bundle"/>
         <copy todir="${preload.bundles.dir}" flatten="true">
+            <path refid="felix/ds"/>
             <path refid="default/ipojo"/>
+            <path refid="pax/url"/>
             <path refid="pax/logging"/>
+            <path refid="jetty/jetty"/>
             <path refid="pax/web"/>
             <path refid="felix/webconsole"/>
+            <path refid="pax/war"/>
         </copy>
         <delete file="${preload.bundles.dir}/org.apache.felix.ipojo.annotations-1.12.1.jar"/>
         <touch file="${stage.dir}/log/felix.log" mkdirs="true"/>
