--- a/stage-templates/apache-felix-5.6/build.xml
+++ b/stage-templates/apache-felix-5.6/build.xml
@@ -31,9 +31,17 @@
         <resolvePath id="felix/webconsole">
             <!-- Main -->
             <dependency org="org.apache.felix" name="org.apache.felix.webconsole" rev="4.3.4" transitive="false"/>
+            <dependency org="org.apache.felix" name="org.apache.felix.webconsole.plugins.ds" rev="2.0.8" transitive="false"/>
+            <dependency org="org.apache.felix" name="org.apache.felix.webconsole.plugins.memoryusage" rev="1.0.8" transitive="false"/>
+            <dependency org="org.apache.felix" name="org.apache.felix.webconsole.plugins.obr" rev="1.0.4" transitive="false"/>
+            <dependency org="org.apache.felix" name="org.apache.felix.webconsole.plugins.packageadmin" rev="1.0.4" transitive="false"/>
+            <dependency org="org.apache.felix" name="org.apache.felix.ipojo.webconsole" rev="1.7.0" transitive="false"/>
+            <dependency org="org.apache.karaf.webconsole" name="org.apache.karaf.webconsole.http" rev="4.1.5" transitive="false"/>
             <!-- Dependencies -->
+            <dependency org="org.apache.felix" name="org.apache.felix.inventory" rev="1.0.0" transitive="false"/>
             <dependency org="commons-fileupload" name="commons-fileupload" rev="1.2.1" transitive="false"/>
             <dependency org="commons-io" name="commons-io" rev="1.4" transitive="false"/>
+            <dependency org="org.json" name="json" rev="20180130" transitive="false"/>
         </resolvePath>
 
         <resolvePath id="pax/url">
