Add Pax-CDI-Sample1-Web module for testing.

--- a/04-cdi-everywhere/build.xml
+++ b/04-cdi-everywhere/build.xml
@@ -33,6 +33,13 @@
             </classpath>
         </build.module>
 
+        <!--build.module dir="pax-cdi-sample1-web" symbolicName="Pax-CDI-Sample1-Web" version="1.0" deploy="true">
+            <classpath>
+                <pathelement path="${cdi-sample1.jar}"/>
+                <path refid="cdi/build"/>
+            </classpath>
+        </build.module-->
+
     </target>
 
 </project>
