--- a/build.xml
+++ b/build.xml
@@ -11,8 +11,12 @@
         <subant buildpath="${basedir}/stage-templates/apache-felix-5.6"/>
     </target>
 
+    <target name="build-lucidj">
+        <subant buildpath="${basedir}/stage-templates/lucidj-core-1.1"/>
+    </target>
+
     <target name="build-stage">
-        <antcall target="build-felix"/>
+        <antcall target="build-lucidj"/>
     </target>
 
     <target name="build-library-version">
